{
  "version": 4,
  "terraform_version": "1.1.1",
  "serial": 428,
  "lineage": "04b4825a-52d8-ed85-efe1-49eb7fb2eaf6",
  "resources": [
    {
      "module": "module.acceptance-linux-vm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.acceptance-linux-vm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b996646377b6619",
            "arn": "arn:aws:ec2:us-east-1:076489258907:instance/i-0054aa6eaaf255a1c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0054aa6eaaf255a1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cz75ww",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01254fa90feff0379",
            "private_dns": "ip-10-1-0-31.ec2.internal",
            "private_ip": "10.1.0.31",
            "public_dns": "ec2-3-85-1-25.compute-1.amazonaws.com",
            "public_ip": "3.85.1.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00008a743249705b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1d6a23bef298e8c",
            "tags": {
              "Name": "Demosession"
            },
            "tags_all": {
              "Name": "Demosession"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07ab856ce4b7d4c3a"
            ]
          },
          "dependencies": [
            "module.acceptance-linux-vm.aws_security_group.PublicSG",
            "module.acceptance-linux-vm.aws_subnet.subnet_public",
            "module.acceptance-linux-vm.aws_vpc.vpc",
            "module.acceptance-linux-vm.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.acceptance-linux-vm",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.acceptance-linux-vm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076489258907:internet-gateway/igw-096f5de276e435967",
            "id": "igw-096f5de276e435967",
            "owner_id": "076489258907",
            "vpc_id": "vpc-074ba2628194719bd"
          },
          "dependencies": [
            "module.acceptance-linux-vm.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptance-linux-vm",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "module.acceptance-linux-vm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076489258907:route-table/rtb-09ae7786dbd7c76e5",
            "id": "rtb-09ae7786dbd7c76e5",
            "owner_id": "076489258907",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096f5de276e435967",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-074ba2628194719bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.acceptance-linux-vm.aws_internet_gateway.igw",
            "module.acceptance-linux-vm.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptance-linux-vm",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "module.acceptance-linux-vm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0366bad969fffb783",
            "route_table_id": "rtb-09ae7786dbd7c76e5",
            "subnet_id": "subnet-0d1d6a23bef298e8c"
          },
          "dependencies": [
            "module.acceptance-linux-vm.aws_internet_gateway.igw",
            "module.acceptance-linux-vm.aws_route_table.rtb_public",
            "module.acceptance-linux-vm.aws_subnet.subnet_public",
            "module.acceptance-linux-vm.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptance-linux-vm",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PublicSG",
      "provider": "module.acceptance-linux-vm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076489258907:security-group/sg-07ab856ce4b7d4c3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ab856ce4b7d4c3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DemosessionSG",
            "name_prefix": "",
            "owner_id": "076489258907",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-074ba2628194719bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.acceptance-linux-vm.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptance-linux-vm",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "module.acceptance-linux-vm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076489258907:subnet/subnet-0d1d6a23bef298e8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1d6a23bef298e8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076489258907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-074ba2628194719bd"
          },
          "dependencies": [
            "module.acceptance-linux-vm.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.acceptance-linux-vm",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.acceptance-linux-vm.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076489258907:vpc/vpc-074ba2628194719bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0caf3298ee46c159c",
            "default_route_table_id": "rtb-0aa58cd0a92ed20d1",
            "default_security_group_id": "sg-094e9691dedd6a49b",
            "dhcp_options_id": "dopt-07fd9f32a1b942a49",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-074ba2628194719bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa58cd0a92ed20d1",
            "owner_id": "076489258907",
            "tags": {
              "Name": "DemoSessionVPC"
            },
            "tags_all": {
              "Name": "DemoSessionVPC"
            }
          }
        }
      ]
    }
  ]
}